@@ -51,6 +51,7 @@ Bug fixes
  * Position of options in mobile nav-menu (Jack Paine)
  * Center page editor footer regardless of screen width (Jack Paine)
  * Change the design of the navbar toggle icon so that it no longer obstructs page headers (Jack Paine)
+ * Document add/edit forms no longer render container elements for hidden fields (Jeffrey Chau)
 
 Upgrade considerations
 ======================
